Fix. z-index 때문에 header구조 변경

--- a/public/src/css/partials/header.scss
+++ b/public/src/css/partials/header.scss
@@ -1,9 +1,10 @@
-body {
-  margin-top: 95px;
-}
-.header {
+header {
+  width: 100%;
   position: fixed;
-  top: 0;
+  z-index: 99999;
+  background-color: white;
+}
+.header__menu-container {
   width: 100%;
   height: 65px;
   display: grid;
