--- a/public/src/css/partials/shell.scss
+++ b/public/src/css/partials/shell.scss
@@ -1,4 +1,4 @@
-tr {
+td {
   min-width: 102px;
   min-height: 22px;
 }
